# eggsistential

./: .gitignore  .gitmodules  README.md
backend/: .env.example  README.md  package-lock.json  package.json
backend/database/: schema.sql
backend/src/: index.ts
backend/src/config/: constants.ts  env.ts
backend/src/gateway/: gameGateway.ts
backend/src/lib/: solana.ts
backend/src/routes/: auth.ts  faucet.ts  game.ts  leaderboard.ts  passport.ts  vault.ts
backend/src/services/: blockchainListener.ts  faucetService.ts  gameValidator.ts  opsHealth.ts  recoveryWorker.ts  sessionStore.ts  settlementExecutor.ts  signatureService.ts  timerAuthority.ts
backend/src/utils/: solana.ts
docs/: README.md  SUMMARY.md  architecture.md  backend.md  deployed-addresses.md  deployment.md  frontend.md  gameplay.md  getting-started.md  onchain-system.md  passport.md
docs/superpowers/specs/: 2026-05-06-taxi-vehicle-design.md  2026-05-06-vehicle-detailing-design.md  2026-05-06-vehicle-ratio-variants-design.md
frontend/: .env.example  .gitignore  README.md  global.d.ts  next-env.d.ts  package-lock.json  package.json  tsconfig.json
frontend/public/: script.js
frontend/public/.well-known/: farcaster.json
frontend/src/app/: page.tsx  (+2 more)
sc/: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
sc/programs/eggsistential/: Cargo.toml
sc/programs/eggsistential/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
sc/scripts/: DEPLOY.md  import-base58-wallet.mjs  initialize-config.ts  package-lock.json  package.json  smoke-test.ts  tsconfig.json
(+28 files in other folders)
