[package]
name = "eggsistential"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Eggsistential Solana program built with Anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "eggsistential"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
